frontend/test/should_fail/index_pattern_multiple_edge_index_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	-e:E{multiple(Ni >= 0, Ni <= 1, Ei >= 42, Ei <= 44)}->;
	
	modify {
	}
}
